--- a/chessboard/styles.css
+++ b/chessboard/styles.css
@@ -23,7 +23,7 @@ header, #title{
     grid-template-columns: repeat(8, 1fr);
 }
 
-.chess > div{
+.chess {
    border: solid black;
 }
 
@@ -51,6 +51,7 @@ header, #title{
     .chess .wchess, .chess .bchess {
     width: 20px;
     height: 20px;  
+    border: solid black;
    
    }
 
@@ -68,7 +69,7 @@ header, #title{
     .chess .wchess, .chess .bchess {
         width:40px;
         height:40px;    
-          
+        border: solid black;  
        }
 
        .chess{
@@ -88,7 +89,7 @@ header, #title{
     .chess .wchess, .chess .bchess{
         width:100px;
         height:100px;    
-          
+        border: solid black;  
        }
        .chess{
         max-width: 816px;
